--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 
     h1{
         font-size: 50px;
